<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReportQueueActivity">

    <include
        android:id="@+id/include"
        layout="@layout/app_bar_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ImageView
        android:id="@+id/restaurant_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="55dp"
        app:layout_constraintBottom_toTopOf="@id/restaurant_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.24" />

    <ToggleButton
        android:id="@+id/report_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#E91E63"
        android:shadowColor="#A8A8A8"
        android:shadowRadius="5"
        android:text="report_btn"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#FFFFFF"
        android:textOff="Start Queue"
        android:textOn="End Queue"
        android:textStyle="normal|bold"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toTopOf="@+id/map"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/favorites_star"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_star_border_24px"
        android:layout_marginLeft="15dp"
        app:layout_constraintLeft_toRightOf="@id/report_btn"
        app:layout_constraintBottom_toBottomOf="@id/report_btn"
        app:layout_constraintTop_toTopOf="@id/report_btn"/>

    <TextView
        android:id="@+id/restaurant_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:text="Restaurant name here"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/restaurant_address"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95" />

    <TextView
        android:id="@+id/restaurant_address"
        android:layout_width="271dp"
        android:layout_height="57dp"
        android:gravity="center_horizontal"
        android:text="Restaurant address here"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/report_btn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/include"
        app:layout_constraintVertical_bias="0.763" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/lightGrey"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/map"/>

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:id="@+id/map"
        tools:context=".MapsActivity"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/queue_time"
        android:layout_width="319dp"
        android:layout_height="43dp"
        android:text="Queue Timer"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/report_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/restaurant_address"
        app:layout_constraintVertical_bias="0.523" />

</androidx.constraintlayout.widget.ConstraintLayout>