...
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_title" />

    <mehdi.sakout.fancybuttons.FancyButton
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/about_app"
        app:layout_constraintBottom_toBottomOf="parent"
        fancy:fb_borderColor="#FFFFFF"
        fancy:fb_text="Sign In"
        fancy:fb_radius="5dp"
        fancy:fb_textSize="22dp"
        fancy:fb_defaultColor="@color/colorPrimary"/>

</androidx.constraintlayout.widget.ConstraintLayout>
